add clippy component

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,6 @@ env:
 # TODO test coverage
 # TODO release (arm macos-14)
 # TODO lock file?
-# TODO build release
 # TODO ensure config scheme is up to date
 
 jobs:
@@ -60,6 +59,7 @@ jobs:
       matrix:
         include:
           - os: ubuntu-22.04
+            component: clippy
           - os: macos-12
           - os: windows-2022
     runs-on: ${{ matrix.os }}
@@ -69,6 +69,7 @@ jobs:
 
       - name: Install toolchain
         run: rustup toolchain install --profile minimal ${{ env.RUST_TOOLCHAIN_VERSION }}
+      # TODO install components
       - name: Setup toolchain
         run: rustup default ${{ env.RUST_TOOLCHAIN_VERSION }}
 
@@ -77,7 +78,7 @@ jobs:
       - name: Build
         run: cargo build --all-targets --all-features
       - name: Clippy
-        if: runner.os == 'Linux'
+        if: ${{ matrix.component == 'clippy' }}
         run: cargo clippy --all-targets --all-features
       - name: Test
         run: cargo test --all-features
