install clippy component

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,15 +5,13 @@ concurrency:
   cancel-in-progress: true
 env:
   CARGO_TERM_COLOR: always
-  RUSTFLAGS: -Dwarnings
-  RUST_TOOLCHAIN_VERSION: stable
+  RUST_TOOLCHAIN_VERSION: 1.76.0
 
 # TODO caching (rust files, sccache)
-# TODO musl build, static link for msvc
 # TODO test coverage
-# TODO release (arm macos-14)
 # TODO lock file?
 # TODO ensure config scheme is up to date
+# TODO linux musl
 
 jobs:
   lint:
@@ -60,28 +58,34 @@ jobs:
         include:
           - os: ubuntu-22.04
             component: clippy
+            target: x86_64-unknown-linux-gnu
           - os: macos-12
+            target: x86_64-apple-darwin
+          - os: macos-14
+            target: aarch64-apple-darwin
           - os: windows-2022
+            target: x86_64-pc-windows-msvc
+            rustflags: -C target-feature=+crt-static
     runs-on: ${{ matrix.os }}
-    name: ${{ matrix.os }}
+    name: ${{ matrix.target }}
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install toolchain
-        run: rustup toolchain install --profile minimal ${{ env.RUST_TOOLCHAIN_VERSION }}
-      # TODO install components
-      - name: Setup toolchain
-        run: rustup default ${{ env.RUST_TOOLCHAIN_VERSION }}
+      - run: rustup toolchain install --profile minimal ${{ env.RUST_TOOLCHAIN_VERSION }} -t ${{ matrix.target }}
+      - run: rustup default ${{ env.RUST_TOOLCHAIN_VERSION }}
+      - if: ${{ matrix.component }}
+        run: rustup component add ${{ matrix.component }}
 
       - name: Fetch
         run: cargo fetch
-      - name: Build
-        run: cargo build --all-targets --all-features
       - name: Clippy
         if: ${{ matrix.component == 'clippy' }}
-        run: cargo clippy --all-targets --all-features
+        run: cargo clippy --all-targets --all-features -- -D warnings
+      - name: Build
+        run: cargo build --all-targets --all-features
       - name: Test
         run: cargo test --all-features
-
       - name: Build release
-        run: cargo build --release
+        run: cargo build --release --target ${{ matrix.target }}
+        env:
+          RUSTFLAGS: ${{ matrix.rustflags }}
