strip release binary

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,3 +53,8 @@ vg_errortools = "0.1"
 env_logger = "0.11"
 tracing = { version = "0.1", default-features = false }
 tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
+
+[profile.release]
+strip = true
+codegen-units = 1
+lto = true
