--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ description = "A flexible rule-based file and folder comparison tool and crate i
 repository = "https://github.com/VolumeGraphics/havocompare"
 homepage = "https://github.com/VolumeGraphics/havocompare"
 documentation = "https://docs.rs/havocompare"
-version = "0.6.0"
+version = "0.6.1"
 edition = "2021"
 license = "MIT"
 authors = ["Volume Graphics GmbH"]
@@ -35,7 +35,7 @@ serde_json = "1.0"
 glob = "0.3"
 test-log = { version = "0.2", features = ["trace"] }
 strsim = "0.11"
-itertools = "0.12"
+itertools = "0.13"
 tera = "1.19"
 sha2 = "0.10"
 data-encoding = "2.6"
@@ -48,7 +48,7 @@ tempfile = "3.10"
 fs_extra = "1.3"
 opener = "0.7"
 anyhow = "1.0"
-json_diff_ng = { version = "0.5" }
+json_diff_ng = { version = "0.6", default-features = false }
 
 [dev-dependencies]
 env_logger = "0.11"
